# repaint

./: .gitignore  README.md  pyproject.toml
Ovito_visualization/: A_B_A_B_10_20_10_40.tiff  A_B_A_C_10_40_10_20.tiff  A_B_C_D_E_F_G_H_10_10_10_10_10_10_10_10.tiff  Random_.tiff
examples/: repaint.ipynb
repaint/: cli.py  display.py  painter.py  reader.py
tests/: test_cli.py  test_display.py  test_painter.py  test_reader.py
